[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "ctl-python"
version = "0.1.0"
description = "Native Python bindings for CTL (Color Transformation Language)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Alex Forsythe" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.23"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Graphics",
]

[project.optional-dependencies]
# Runtime test deps. Pairs with full build isolation (`pip install -e .[dev]`).
dev = ["pytest>=7"]
# Build backend + transitive build tools. Required when installing with
# `--no-build-isolation` (faster incremental rebuilds during C++ development).
# Mirror the [build-system].requires list above.
build = ["scikit-build-core>=0.8", "pybind11>=2.12", "cmake>=3.24"]
bench = ["pytest>=7", "pytest-benchmark>=4", "openexr>=3"]
parity = ["pytest>=7", "openexr>=3"]
cov = ["pytest>=7", "pytest-cov>=4"]

[project.urls]
Source = "https://github.com/aforsythe/ctl-python"

[tool.scikit-build]
minimum-version = "0.8"
build-dir = "build/{wheel_tag}"
cmake.version = ">=3.24"
wheel.packages = ["src/ctl"]

[tool.scikit-build.cmake.define]
CTL_FETCH = "ON"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["ctl"]
branch = true
# The C++ extension is opaque to coverage.py; measuring Python wrappers only
# is the honest signal here.
omit = ["src/ctl/_ctl_native*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "PT", "C4"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_* *-win32 *-manylinux_i686"
test-requires = ["pytest", "numpy"]
test-command = "pytest {project}/tests -k 'not parity_ctlrender and not parallel_speedup and not interrupt'"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = "yum install -y openexr-devel imath-devel || apt-get update && apt-get install -y libopenexr-dev libimath-dev"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-all = "brew install openexr imath"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-all = "vcpkg install openexr imath"
